matches can now be started using the config page of the webinterface

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,7 +31,7 @@
                         Match Status
                     </a>
                     <div class="sb-sidenav-menu-heading">Admin</div>
-                    <a class="nav-link" href="/manageMatches">
+                    <a class="nav-link" href="/config">
                         <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                         Manage Matches
                     </a>
