--- a/app/templates/status.html
+++ b/app/templates/status.html
@@ -97,7 +97,8 @@
                                     </tr>
                                 </table>
                                 <hr>
-                                <input class="btn btn-primary" type="submit" value="End Match"
+                                <input id="stop_button_{{ server.id }}" class="btn btn-primary" type="submit"
+                                       value="End Match"
                                        onclick="endMatch({{ server.id }})"
                                        name="submit">
                             </div>
@@ -115,14 +116,11 @@
             xmlHttp.send(null);
 
             let res = JSON.parse(xmlHttp.responseText);
-            console.log(res);
 
             for (server in res) {
                 server = res[server];
                 server_id = server["id"];
 
-                console.log(server);
-                console.log(`${server_id}ip`);
                 document.getElementById(`${server_id}ip`).innerText = server["ip"];
 
                 json_res = server["get5_stats"];
@@ -180,12 +178,14 @@
             let xmlHttp = new XMLHttpRequest();
             xmlHttp.open("POST", "/api/stopMatch", false);
             xmlHttp.setRequestHeader("Content-Type", "application/json");
+            document.getElementById(`stop_button_${id}`).disabled = true;
             xmlHttp.send(JSON.stringify({"id": id}));
 
             let res = JSON.parse(xmlHttp.responseText);
             if (xmlHttp.status === 200) {
                 window.location.reload();
             } else {
+                document.getElementById(`stop_button_${id}`).disabled = false;
                 alert("Unable to stop match, see server logs");
             }
         }
