started fixing uploading of demo, currently fails with 422 unprocessable entity

--- a/app/templates/config.html
+++ b/app/templates/config.html
@@ -42,7 +42,7 @@
     <script>
         function startTeamMatch() {
             let xmlHttp = new XMLHttpRequest();
-            xmlHttp.open("POST", "/api/createMatch", false);
+            xmlHttp.open("POST", "/api/match", false);
 
             xmlHttp.setRequestHeader("Content-Type", "application/json");
             xmlHttp.send(JSON.stringify({
