added pause and unpause commands to webinterface added demos page in webinterface to download demo files of matches added elo to message in telegram bots fixed a bug where the "finished" attribute was not set correctly to stopped, when stopped from the webinterface

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Match Status
                     </a>
+                    <a class="nav-link" href="/demos">
+                        <div class="sb-nav-link-icon"><i class="fa fa-download"></i></div>
+                        Demo Download
+                    </a>
                     <div class="sb-sidenav-menu-heading">Admin</div>
                     <a class="nav-link" href="/config">
                         <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
