public status page is now working on mobile phones if a gameserver is not reachable the api won't throw an error anymore and just set the state as unreachable

--- a/app/templates/public_status.html
+++ b/app/templates/public_status.html
@@ -3,7 +3,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-800 text-white">
-<div class="container mx-auto">
+<div class="lg:container lg:mx-auto">
     <h1 class="text-2xl font-bold ml-5 mt-5 mb-5">CS:GO LAN Tournament Status</h1>
     <div class="grid grid-cols-10">
         <div id="teams" class="grid col-span-3 items-start content-start">
