fixed typo in status page

--- a/app/templates/status.html
+++ b/app/templates/status.html
@@ -76,7 +76,7 @@
                                 <h3>Team#2</h3>
                                 <table style="width:100%">
                                     <tr>
-                                        <th>Team #2 Players Connected</th>
+                                        <th>Players Connected</th>
                                         <th id="{{ server.id }}get5_team2_connected_clients"></th>
                                     </tr>
                                     <tr>
