--- a/app/templates/public_status.html
+++ b/app/templates/public_status.html
@@ -21,12 +21,13 @@
     <div class="grid grid-cols-10 gap-4">
         <div class="grid col-span-2 items-start content-start">
             <h1 class="text-2xl font-bold ml-5 mt-5 mb-5">Player Kills</h1>
-            <div id="player_kills">
+            <div id="player_kills" class="relative">
                 <!-- List of player kills will be inserted here -->
             </div>
         </div>
     </div>
 </div>
+<div style="display: none" class="bg-sky-600"></div>
 </body>
 <style>
 </style>
@@ -67,7 +68,7 @@
     function process_update_queue() {
         if (update_queue.length > 0 && animating === 0) {
             let update = update_queue[0];
-            console.log(update);
+            console.log("Processing update", update);
 
             if (update.type === "match") {
                 update_match(update);
@@ -94,7 +95,9 @@
         constructor() {
             super();
             this.new = false;
+            this.delete = false;
             this.new_html = "";
+            this.pos = -1;
         }
     }
 
@@ -124,18 +127,101 @@
             playerEl.classList.add('bg-cyan-600', 'rounded-md', 'p-4', 'm-1', 'flex-auto', 'flex-nowarp', 'font-extrabold');
             playerEl.id = `player_${update.id}`;
             playerEl.innerHTML = update.new_html;
-            playerEl.addEventListener('animationend', (event) => {
-                document.getElementById(`player_${update.id}_anim`).style.display = "none";
-                //document.getElementById(`${player}_anim`).classList.remove("animate-ping");
-                animating -= 1;
-            });
 
             document.getElementById("player_kills").appendChild(playerEl);
         }
+
         const player = document.getElementById(`player_${update.id}_value`);
+        if (update.delete) {
+            document.getElementById(`player_${update.id}`).remove();
+            return;
+        }
+
         if (player !== null) {
             player.innerHTML = update.html;
         }
+
+        const this_player = document.getElementById(`player_${update.id}`);
+        const swap_player = document.getElementById(`player_kills`).children[update.pos];
+
+        if (this_player.id === swap_player.id) {
+            return;
+        }
+
+        const container = document.getElementById("player_kills");
+        let this_i = -1;
+        for (let i = 0; i < container.children.length; i++) {
+            if (container.children[i].id === this_player.id) {
+                this_i = i;
+                break;
+            }
+        }
+
+        let swap_i = -1;
+        for (let i = 0; i < container.children.length; i++) {
+            if (container.children[i].id === swap_player.id) {
+                swap_i = i;
+                break;
+            }
+        }
+
+        for (let i = 0; i < update_queue.length; i++) {
+            if (update_queue[i].type === "player_stats" && `player_${update_queue[i].id}` === swap_player.id) {
+                document.getElementById(`player_${update_queue[i].id}_value`).innerHTML = update_queue[i].html;
+                update_queue.splice(i, 1);
+                break;
+            }
+        }
+
+        animating += 1;
+        swap_animation(this_player, swap_player, this_i, swap_i, container);
+    }
+
+    function sleep(ms) {
+        return new Promise(resolve => setTimeout(resolve, ms));
+    }
+
+    async function swap_animation(this_player, swap_player, this_i, swap_i, container) {
+        let height_diff = 0;
+
+        for (let i = Math.min(this_i, swap_i); i < Math.max(this_i, swap_i); i++) {
+            height_diff += container.children[i].clientHeight;
+        }
+        height_diff *= 1.05;
+
+        console.log("Height diff", height_diff);
+        let animationLength = 5000;
+
+        this_player.setAttribute('style', `transform: translate(0px, -${height_diff}px); background-color: orange; transition: background-color ${animationLength / 2}ms ease-in-out, transform ${animationLength}ms`);
+        swap_player.setAttribute('style', `transform: translate(0px, ${height_diff}px); background-color: orange; transition: background-color ${animationLength / 2}ms ease-in-out, transform ${animationLength}ms`);
+
+        await sleep(animationLength / 2);
+
+        this_player.setAttribute('style', `transform: translate(0px, -${height_diff}px); background-color: bg-cyan-600; transition: background-color ${animationLength / 2}ms ease-in-out, transform ${animationLength}ms`);
+        swap_player.setAttribute('style', `transform: translate(0px, ${height_diff}px); background-color: bg-cyan-600; transition: background-color ${animationLength / 2}ms ease-in-out, transform ${animationLength}ms`);
+
+        await sleep(animationLength / 2);
+
+        swapDom(this_player, swap_player);
+        this_player.removeAttribute('style');
+        swap_player.removeAttribute('style');
+
+        await sleep(10);
+        animating -= 1;
+    }
+
+    function swapDom(a, b) {
+        var aParent = a.parentNode;
+        var bParent = b.parentNode;
+
+        var aHolder = document.createElement("div");
+        var bHolder = document.createElement("div");
+
+        aParent.replaceChild(aHolder, a);
+        bParent.replaceChild(bHolder, b);
+
+        aParent.replaceChild(b, aHolder);
+        bParent.replaceChild(a, bHolder);
     }
 
     // Fetch the list of matches from the API
@@ -280,17 +366,22 @@
         Object.keys(resp).forEach(key => {
             if (tracked_player_stats.includes(key)) {
                 const player_stats = resp[key]["players"];
+                let current_players = [];
                 Object.keys(player_stats).forEach(player => {
-                    player = player_stats[player]; // just why, how can a foreach loop not give you the value...
+                    pos = parseInt(player); // WHY IS THIS A STRING????
+                    player = player_stats[pos]; // just why, how can a foreach loop not give you the value...
                     const new_update = new UpdatePlayer();
                     new_update.type = "player_stats";
                     new_update.id = player[0].hashCode();
                     new_update.html = player[1];
+                    new_update.pos = pos;
+
+                    current_players.push(new_update.id.toString());
 
                     if (document.getElementById(`player_${new_update.id}`) === null) {
                         new_update.new = true;
                         new_update.new_html = `
-                            <div class="flex flex-col items-center">
+                            <div class="flex flex-col items-center text-center">
                                 <div id="player_${new_update.id}_name">${player[0]}</div>
                                 <div id="player_${new_update.id}_value">${player[1]}</div>
                             </div>
@@ -299,20 +390,39 @@
                         new_update.new = false;
                     }
 
-                    if (!check_if_already_in_update_queue(new_update.id, new_update.html)) {
+                    if (!check_if_already_in_update_queue(new_update.id, new_update.html, new_update.pos)) {
                         update_queue.push(new_update);
                     }
                 });
+
+                // Remove players that are no longer in the list
+                let container = document.getElementById("player_kills");
+                for (let i = 0; i < container.children.length; i++) {
+                    let child = container.children[i];
+                    console.log(current_players, child.id.split("_")[1]);
+                    if (!current_players.includes(child.id.split("_")[1])) {
+                        new_update = new UpdatePlayer();
+                        new_update.type = "player_stats";
+                        new_update.id = child.id.split("_")[1];
+                        new_update.delete = true;
+                        if (!check_if_already_in_update_queue(new_update.id, new_update.html, new_update.pos)) {
+                            update_queue.push(new_update);
+                        }
+                    }
+                }
             }
         });
     }
 
-    function check_if_already_in_update_queue(id, new_html) {
+    function check_if_already_in_update_queue(id, new_html, pos = -1) {
         // check if already in update_queue and replace value if in queue
         let found = false;
         for (let i = 0; i < update_queue.length; i++) {
             if (update_queue[i].id === id) {
                 update_queue[i].html = new_html;
+                if (pos !== -1) {
+                    update_queue[i].pos = pos;
+                }
                 found = true;
                 break;
             }
